--- a/app.json
+++ b/app.json
@@ -1,10 +1,17 @@
 {
   "pages": [
-    "pages/index/index",
-    "pages/article/article"
+    
+    
+    "pages/article/article",
+    "pages/article/article-detail/article-detail",
+    "pages/index/index"
+    
+    
+    
   ],
   "window": {
-    "navigationBarBackgroundColor": "#fabda1"
+    "navigationBarBackgroundColor": "#fabda1",
+    "enablePullDownRefresh":true
   },
   "sitemapLocation": "sitemap.json"
 }
