--- a/app.json
+++ b/app.json
@@ -1,17 +1,37 @@
 {
   "pages": [
     
-    
+    "pages/movie/movie",
+    "pages/movie/movie-more/movie-more",
+    "pages/index/index",
     "pages/article/article",
-    "pages/article/article-detail/article-detail",
-    "pages/index/index"
-    
+    "pages/article/article-detail/article-detail"
     
     
   ],
   "window": {
     "navigationBarBackgroundColor": "#fabda1",
     "enablePullDownRefresh":true
+  },
+  "tabBar": {
+    "color": "#000",
+    "selectedColor": "blue",
+    "borderStyle": "black",
+    "position": "bottom",
+    "list": [
+      {
+        "pagePath": "pages/article/article",
+        "text": "文章",
+        "iconPath": "/img/wenzhang.png",
+        "selectedIconPath": "/img/wenzhang.png"
+      },
+      {
+        "pagePath": "pages/movie/movie",
+        "text": "电影",
+        "iconPath": "/img/dianying.png",
+        "selectedIconPath": "/img/dianying.png"
+      }
+    ]
   },
   "sitemapLocation": "sitemap.json"
 }
